partially working buttons

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,11 @@ jobs:
       - uses: actions/setup-node@v2
       - run: npm install
       - run: npm run build
-      - run: cp manifest.webmanifest dist/manifest.webmanifest
-      - run: cp *.html dist/
+      # - run: cp manifest.webmanifest dist/manifest.webmanifest
+      # - run: cp *.html dist/
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           branch: gh-pages
-          folder: dist
+          folder: .
