hopefully added font to dist

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@depasquale/three-immersive-controls": "^0.0.12",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "three": "^0.143.0"
   }
