--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "build": "webpack",
-    "build_apk": "./oculus-packaging/ovr-platform-util create-pwa -o granular-vr.apk --android-sdk /Users/bmar5496/Library/Android/sdk --package-name com.scigem.granular-vr --manifest-content-file manifest.webmanifest --apk-template ./oculus-packaging/pwa-template.apk --apk-tool ./oculus-packaging/apktool --keystore ./oculus-packaging/debug.keystore",
+    "build_apk": "../structures-vr/oculus-packaging/ovr-platform-util create-pwa -o granular-vr.apk --android-sdk /Users/bmar5496/Library/Android/sdk --package-name com.scigem.granularvr --manifest-content-file manifest.webmanifest --apk-template ../structures-vr/oculus-packaging/pwa-template.apk --apk-tool ../structures-vr/oculus-packaging/apktool --keystore ../structures-vr/oculus-packaging/debug.keystore",
     "deploy": "adb install granular-vr.apk"
   },
   "repository": {
@@ -34,10 +34,10 @@
     "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
-    "@depasquale/three-immersive-controls": "^0.0.12",
+    "@depasquale/three-immersive-controls": "=0.0.13",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "three": "^0.143.0"
+    "three": "=0.143.0"
   }
 }
