--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
-    "@depasquale/three-immersive-controls": "=0.0.13",
+    "@depasquale/three-immersive-controls": "^0.0.12",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "three": "=0.143.0"
+    "three": "^0.143.0"
   }
 }
