--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/setup-node@v2
       - run: npm install
       - run: npm run build
-      - run: cp manifest.webmanifest dist/manifest.webmanifest
+      - run: cp manifest.json dist/manifest.json
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.2.5
