--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "json5": "^2.2.3",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "three": "^0.143.0"
+    "three": "^0.158.0",
+    "three-instanced-uniforms-mesh": "^0.49.0"
   }
 }
